Revision history for perl distribution Mojolicious-Plugin-AssetPack

1.40 Not Released
 - Can disable Pipe::Reloader from the browser

1.39 2017-01-25T22:39:45+0100
 - Skipping t/sass-source-map.t for now
   http://cpantesters.org/cpan/report/c59d94d4-e16e-11e6-ab5a-96809f28caea

1.38 2017-01-23T14:12:31+0100
 - Fix missing path() function in Pipe::Sass

1.37 2017-01-12T20:52:18+0100
 - Add support for sass source maps
 - No need to delete known media types in AssetPack::Store

1.36 2017-01-11T11:18:45+0100
 - Fix bug in Fetch pipe, fixing t/font-awesome.t
 - Change Mojolicious::Plugin::AssetPack::Asset::path() to return a Mojo::File object

1.35 2017-01-11T10:30:09+0100
 - Forgot to remove Carp::Always from t/recreate.t after debugging

1.34 2017-01-10T23:22:16+0100
 - Compatible with Mojolicious 7.15

1.33 2017-01-08T14:20:03+0100
 - Fix t/reloader.t when CSS::Minifier::XS is missing #113

1.32 2017-01-08T11:50:36+0100
 - Fix Mojo::Home::rel_dir is DEPRECATED in favor of Mojo::Hom::rel_file #112
 - Disable "Reloader" pipe, unless in development

1.31 2017-01-04T14:19:34+0100
 - Fix generating favicons once with MOJO_ASSETPACK_LAZY
 - Made Reloader call process() later

1.30 2016-12-23T03:14:34+0100
 - Fix CoffeeScript, by changing to coffee-script npm package
 - Fix "Unable to download" messages after downloaded sass file #107
 - Add EXPERIMENTAL support for MOJO_ASSETPACK_LAZY=1
 - Marked AssetPack::Asset::mtime() as deprecated

1.29 2016-12-15T23:04:40+0100
 - Fix custom helper name #111

1.28 2016-11-24T10:51:55+0100
 - Fix resetting end_range and start_range after a "Range: bytes=..." request #109

1.27 2016-11-18T15:13:55+0100
 - Add custom 404 page when an asset could not be found

1.26 2016-11-13T17:50:42+0100
 - Change Pipe::Fetch to avoid fetching URL that start with "#" #108

1.25 2016-10-30T21:24:48+0100
 - Add end_range(), start_range() and is_range() to Asset #104

1.24 2016-09-11T17:22:08+0200
 - Forgot to delete t/sass-current-app.t after 1.23
